# priveos-placeholder

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.txt  deploy.sh  init.sh  placeholder.cpp  placeholder.hpp
include/: priveos-placeholder.hpp
src/: CMakeLists.txt  priveos-placeholder.cpp
